# virtualComputer

./: .gitignore  CmakeLists.txt  LICENSE  README.md  build.sh
document/: ALU.md  Bits.md  Bus.md  CPU.md  Instruction_generator.md  Memory.md  Mutil_register.md  Register.md  Selector.md  Shiftor.md  mirco_instructions
src/: compile.sh  computer_main.cpp
src/kernel/: computer_main.cpp  cpu.cpp  cpu.h  instruction_generator.cpp  instruction_generator.h  memory.h  memory_rom.h  mirco_instruction.h  options.h
src/kernel/base/: alu.cpp  alu.h  base.h  bits.cpp  bits.h  bus.cpp  bus.h  distributor.h  memory.cpp  memory.h  mutil_register.cpp  mutil_register.h  options.h  register.cpp  register.h  selector.cpp  selector.h  shiftor.cpp  shiftor.h
test/: CMakeLists.txt  compiler.sh  runtest.sh  test_alu.cpp  test_bits.cpp  test_bus.cpp  test_cpu.cpp  test_distributor.cpp  test_instruction_generator.cpp  test_memory.cpp  test_mutilregister.cpp  test_register.cpp  test_selector.cpp  test_shiftor.cpp
test/conf/: program
tool/: asm.cpp  compile.sh
